--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@ btnMusic.textContent = 'Play';
 const now = Date.now();
 const last = localStorage.getItem('lastVisit');
 if (last && (now - Number(last)) < 3600000) {
-  title.textContent = "You're back.";
-  desc.textContent = "The silence missed you.";
+  title.textContent = "You're back";
+  desc.textContent = "The silence missed you";
 }
 localStorage.setItem('lastVisit', now.toString());
 
