--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
   </div>
 </div>
 
-<!-- 使用 MP3，单文件更简洁 -->
 <audio id="backgroundMusic" src="files/music.mp3" preload="auto"></audio>
 
 <script>
@@ -73,8 +72,8 @@ btnMusic.textContent = 'Play';
 const now = Date.now();
 const last = localStorage.getItem('lastVisit');
 if (last && (now - Number(last)) < 3600000) {
-  title.textContent = "You're back.";
-  desc.textContent = "The silence missed you.";
+  title.textContent = "You're back";
+  desc.textContent = "The silence missed you";
 }
 localStorage.setItem('lastVisit', now.toString());
 
