--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preload" href="./fonts/LXGWWenKai-Regular.woff2" as="font" type="font/woff2" crossorigin>
   <style>
     *{margin:0;padding:0;box-sizing:border-box}
-    :root{--font:'LXGW WenKai','STKaiti','KaiTi','华文行楷',cursive,sans-serif}
+    :root{--font:'LXGW WenKai','华文行楷',cursive,sans-serif}
     body{font-family:var(--font);background:#000;color:#f5f5f5;min-height:100vh;display:flex;justify-content:center;align-items:center;text-align:center;overflow:hidden;position:relative}
     .container{padding:2rem;max-width:800px;animation:fadeIn 1.2s ease-out;z-index:10;position:relative}
     h1{font-size:clamp(2.5rem,8vw,6rem);font-weight:700;letter-spacing:3px;margin-bottom:.5rem;background:linear-gradient(90deg,#00ffcc,#0066ff);-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text;cursor:pointer;transition:transform .1s}
