--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
       .easter-egg button{width:80%;padding:.7rem 1rem}
     }
   </style>
+  <script>
+   var _hmt = _hmt || [];
+  (function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?b6416a31256f89fd9e3cb7bd8fe995b7";
+    var s = document.getElementsByTagName("script")[0]; 
+    s.parentNode.insertBefore(hm, s);
+  })();
+  </script>
 </head>
 <body>
 <div class="container">
