--- a/index.html
+++ b/index.html
@@ -6,66 +6,14 @@
   <title>oAix</title>
   <meta name="description" content="Designed by haen" />
 
-  <!-- ✅ 极简 favicon：仅一个大写 "X"，黑底 + 青蓝字，Base64 SVG 内联 -->
+  <!-- ✅ favicon（保持内联） -->
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><circle cx=%2250%22 cy=%2250%22 r=%2250%22 fill=%22%23000%22/><text x=%2250%22 y=%2265%22 text-anchor=%22middle%22 font-size=%2248%22 fill=%22%2300ffcc%22 font-family=%22Arial, sans-serif%22 font-weight=%22bold%22>iA</text></svg>" type="image/svg+xml">
+
+  <!-- 🔊 预加载字体 -->
   <link rel="preload" href="./fonts/LXGWWenKai-Regular.woff2" as="font" type="font/woff2" crossorigin>
-  <style>
-    *{margin:0;padding:0;box-sizing:border-box}
-    :root{--font:'LXGW WenKai','华文行楷',cursive,sans-serif}
-    body{font-family:var(--font);background:#000;color:#f5f5f5;min-height:100vh;display:flex;justify-content:center;align-items:center;text-align:center;overflow:hidden;position:relative}
-    .container{padding:2rem;max-width:800px;animation:fadeIn 1.2s ease-out;z-index:10;position:relative}
-    h1{font-size:clamp(2.5rem,8vw,6rem);font-weight:700;letter-spacing:3px;margin-bottom:.5rem;background:linear-gradient(90deg,#00ffcc,#0066ff);-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text;cursor:pointer;transition:transform .1s}
-    @keyframes breathe{0%,100%{text-shadow:0 0 8px rgba(0,255,204,.3)}50%{text-shadow:0 0 20px rgba(0,255,204,.6)}}
-    h1.breathe{animation:breathe 1.2s ease-in-out}
-    .tagline{font-size:1.4rem;color:#ccc;margin:1rem 0;font-weight:300;transition:color .6s ease,opacity .4s ease}
-    .tagline:hover{color:#00ffcc;text-shadow:0 0 8px rgba(0,255,204,.4);opacity:1}
-    @font-face{font-family:'LXGW WenKai';src:url('./fonts/LXGWWenKai-Regular.woff2') format('woff2');font-weight:normal;font-style:normal;font-display:swap}
-    .signature{font-size:1.2rem;color:#ddd;margin-top:1.5rem;transition:color .4s ease;font-family:var(--font);letter-spacing:1px}
-    .signature:hover{color:#00ffcc}
 
-    /* ✨ For you 文字样式 */
-    #for-you {
-      position: fixed;
-      bottom: 12px;
-      right: 12px;
-      font-size: 0.95rem;
-      color: #666;
-      opacity: 0;
-      transition: opacity 1.2s ease;
-      pointer-events: none;
-      z-index: 5;
-    }
-    #for-you.show {
-      opacity: 1;
-    }
-
-    .easter-egg{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,.6);backdrop-filter:blur(10px);z-index:100;justify-content:center;align-items:center;flex-direction:column;color:#fff;font-size:1.5rem;text-align:center;padding:2rem;gap:1.5rem;perspective:1000px}
-    .flip-panel{transform-style:preserve-3d;animation:flipIn .6s cubic-bezier(.34,1.56,.64,1) forwards}
-    .easter-egg.closing .flip-panel{animation:flipOut .6s cubic-bezier(.34,1.56,.64,1) forwards}
-    @keyframes flipIn{0%{transform:rotateY(-90deg) scale(.9);opacity:0}100%{transform:rotateY(0) scale(1);opacity:1}}
-    @keyframes flipOut{0%{transform:rotateY(0) scale(1);opacity:1}100%{transform:rotateY(90deg) scale(.9);opacity:0}}
-    .easter-egg h2,.easter-egg p{font-family:var(--font);font-weight:normal}
-    .easter-egg h2{font-size:2rem;margin:0;color:#fff;display:flex;align-items:center;gap:.5rem}
-    .easter-egg p{font-size:1.2rem;margin:.5rem 0;color:#ccc;font-weight:300}
-    .easter-egg button{margin-top:.5rem;padding:.8rem 1.5rem;font-size:1.1rem;background:#00ffcc;color:#000;border:none;border-radius:8px;cursor:pointer;transition:all .2s ease;box-shadow:0 2px 8px rgba(0,255,204,.3)}
-    .easter-egg button:hover{background:#0066ff;color:#fff;transform:scale(1.05);box-shadow:0 4px 12px rgba(0,102,255,.4)}
-    @keyframes fadeIn{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
-    @media (max-width:600px){
-      h1{font-size:2.5rem}
-      .tagline,.signature{font-size:1.1rem}
-      .easter-egg h2{font-size:1.8rem}
-      .easter-egg button{width:80%;padding:.7rem 1rem}
-    }
-  </style>
-  <script>
-   var _hmt = _hmt || [];
-  (function() {
-    var hm = document.createElement("script");
-    hm.src = "https://hm.baidu.com/hm.js?b6416a31256f89fd9e3cb7bd8fe995b7";
-    var s = document.getElementsByTagName("script")[0]; 
-    s.parentNode.insertBefore(hm, s);
-  })();
-  </script>
+  <!-- 🎨 外部 CSS -->
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 <div class="container">
@@ -85,134 +33,20 @@
   </div>
 </div>
 
-<audio id="backgroundMusic" src="files/music.mp3" preload="auto"></audio>
+<audio id="backgroundMusic" src="./files/music.mp3" preload="auto"></audio>
 
+<!-- 📊 百度统计（保留在 HTML） -->
 <script>
-// 补全缺失的 DOM 引用（避免报错）
-const logo = document.getElementById('logo');
-const closeEgg = document.getElementById('closeEgg');
-
-const originalVolume = 0.7;
-let tapCount = 0;
-let audioUnlocked = false;
-let isFading = false;
-
-const music = document.getElementById('backgroundMusic');
-const btnMusic = document.getElementById('musicToggle');
-const egg = document.getElementById('egg');
-const title = document.getElementById('eggTitle');
-const desc = document.getElementById('eggDesc');
-const forYou = document.getElementById('for-you');
-
-btnMusic.textContent = 'Play';
-
-const now = Date.now();
-const last = localStorage.getItem('lastVisit');
-if (last && (now - Number(last)) < 3600000) {
-  title.textContent = "You're back";
-  desc.textContent = "The silence missed you";
-}
-localStorage.setItem('lastVisit', now.toString());
-
-// 检查是否在 22:00 - 23:59 之间（你原逻辑是 hour === 22）
-function showForYouIfNeeded() {
-  const now = new Date();
-  const hour = now.getHours();
-  if (hour === 22) {
-    forYou.classList.add('show');
-  } else {
-    forYou.classList.remove('show');
-  }
-}
-
-showForYouIfNeeded();
-setInterval(showForYouIfNeeded, 60000);
-
-document.addEventListener('click', e => {
-  if (e.target.closest('.easter-egg')) return;
-  tapCount++;
-  if (tapCount === 3) {
-    egg.style.display = 'flex';
-    egg.classList.remove('closing');
-    tapCount = 0;
-  } else if (tapCount > 3) tapCount = 0;
-});
-
-btnMusic.addEventListener('click', () => {
-  if (!audioUnlocked) {
-    const p = music.play();
-    if (p) p.then(() => {
-      audioUnlocked = true;
-      music.volume = originalVolume;
-      btnMusic.textContent = 'Pause';
-    }).catch(() => alert('Please interact first to enable audio.'));
-  } else {
-    if (music.paused) {
-      music.play();
-      btnMusic.textContent = 'Pause';
-    } else {
-      music.pause();
-      btnMusic.textContent = 'Play';
-    }
-  }
-});
-
-document.addEventListener('visibilitychange', () => {
-  if (isFading) return;
-  if (document.hidden && !music.paused) {
-    isFading = true;
-    fadeOut(music, () => {
-      music.pause();
-      isFading = false;
-    });
-  } else if (!document.hidden && audioUnlocked && music.paused) {
-    isFading = true;
-    music.play();
-    fadeIn(music, originalVolume, () => isFading = false);
-  }
-});
-
-logo.addEventListener('click', () => {
-  logo.classList.remove('breathe');
-  requestAnimationFrame(() => logo.classList.add('breathe'));
-});
-
-closeEgg.addEventListener('click', () => {
-  egg.classList.add('closing');
-  if (!music.paused) {
-    fadeOut(music, () => {
-      music.pause();
-      btnMusic.textContent = 'Play';
-    });
-  }
-  setTimeout(() => {
-    egg.style.display = 'none';
-    music.volume = originalVolume;
-  }, 600);
-});
-
-function fadeOut(audio, onEnd) {
-  let vol = audio.volume;
-  const step = () => {
-    vol = Math.max(0, vol - 0.05);
-    audio.volume = vol;
-    if (vol > 0) requestAnimationFrame(step);
-    else onEnd?.();
-  };
-  requestAnimationFrame(step);
-}
-
-function fadeIn(audio, targetVol, onEnd) {
-  audio.volume = 0;
-  let vol = 0;
-  const step = () => {
-    vol = Math.min(targetVol, vol + 0.05);
-    audio.volume = vol;
-    if (vol < targetVol) requestAnimationFrame(step);
-    else onEnd?.();
-  };
-  requestAnimationFrame(step);
-}
+  var _hmt = _hmt || [];
+  (function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?b6416a31256f89fd9e3cb7bd8fe995b7";
+    var s = document.getElementsByTagName("script")[0]; 
+    s.parentNode.insertBefore(hm, s);
+  })();
 </script>
+
+<!-- 🧠 主逻辑 JS -->
+<script src="./js/main.js" defer></script>
 </body>
 </html>
