--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>oAix</title>
-  <meta name="description" content="Designed by haen" />
+  <meta name="description" content="Designed by admirer" />
 
   <!-- ✅ favicon（保持内联） -->
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><circle cx=%2250%22 cy=%2250%22 r=%2250%22 fill=%22%23000%22/><text x=%2250%22 y=%2265%22 text-anchor=%22middle%22 font-size=%2248%22 fill=%22%2300ffcc%22 font-family=%22Arial, sans-serif%22 font-weight=%22bold%22>iA</text></svg>" type="image/svg+xml">
