--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="container">
   <h1 id="logo">oAix</h1>
   <p class="tagline">Where silence speaks</p>
-  <p class="signature">Designed by haen</p>
+  <p class="signature">Designed by admirer</p>
 </div>
 
 <div id="for-you">For you, who reads silence.</div>
