--- a/index.html
+++ b/index.html
@@ -36,15 +36,8 @@
 <audio id="backgroundMusic" src="./files/music.mp3" preload="auto"></audio>
 
 <!-- 📊 百度统计（保留在 HTML） -->
-<script>
-  var _hmt = _hmt || [];
-  (function() {
-    var hm = document.createElement("script");
-    hm.src = "https://hm.baidu.com/hm.js?b6416a31256f89fd9e3cb7bd8fe995b7";
-    var s = document.getElementsByTagName("script")[0]; 
-    s.parentNode.insertBefore(hm, s);
-  })();
-</script>
+<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+<script>LA.init({id:"3OBp5YsL9wpym2fq",ck:"3OBp5YsL9wpym2fq"})</script>
 
 <!-- 🧠 主逻辑 JS -->
 <script src="./js/main.js" defer></script>
