--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <!-- 📊 百度统计（保留在 HTML） -->
 <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
-<script>LA.init({id:"3OBp5YsL9wpym2fq",ck:"3OBp5YsL9wpym2fq"})</script>
+<script>LA.init({id:"3OBp5YsL9wpym2fq",ck:"3OBp5YsL9wpym2fq",autoTrack:true,hashMode:true})</script>
 
 <!-- 🧠 主逻辑 JS -->
 <script src="./js/main.js" defer></script>
