--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
   <!-- 🔊 预加载字体 -->
   <link rel="preload" href="./fonts/LXGWWenKai-Regular.woff2" as="font" type="font/woff2" crossorigin>
 
+  <!-- 📊 统计（提前加载） -->
+  <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+  <script>
+    LA.init({
+      id: "3OBp5YsL9wpym2fq",
+      ck: "3OBp5YsL9wpym2fq",
+      autoTrack: true,
+      hashMode: true
+    });
+  </script>
+  
   <!-- 🎨 外部 CSS -->
   <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -34,10 +45,6 @@
 </div>
 
 <audio id="backgroundMusic" src="./files/music.mp3" preload="auto"></audio>
-
-<!-- 📊 百度统计（保留在 HTML） -->
-<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
-<script>LA.init({id:"3OBp5YsL9wpym2fq",ck:"3OBp5YsL9wpym2fq",autoTrack:true,hashMode:true})</script>
 
 <!-- 🧠 主逻辑 JS -->
 <script src="./js/main.js" defer></script>
