--- a/index.html
+++ b/index.html
@@ -13,16 +13,8 @@
   <link rel="preload" href="./fonts/LXGWWenKai-Regular.woff2" as="font" type="font/woff2" crossorigin>
 
   <!-- 📊 统计（提前加载） -->
-  <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
-  <script>
-    LA.init({
-      id: "3OBp5YsL9wpym2fq",
-      ck: "3OBp5YsL9wpym2fq",
-      autoTrack: true,
-      hashMode: true
-    });
-  </script>
-  
+  <script type="text/javascript" src="//api.wukongtongji.com/c?_=852163543516340224" async></script>
+
   <!-- 🎨 外部 CSS -->
   <link rel="stylesheet" href="./css/style.css">
 </head>
